scss/site/_structure.scss
/**
 * Table of Contents for FoundationPress:
 *
 * 1.0 - Custom settings
 * 2.0 - Typography
 * 3.0 - Header, sidebar and footer
 * 4.0 - Content
 *	4.1 - Pages
 *	4.2 - Posts
 *	4.3	- Widgets
 *	4.4 - Comments
  *	4.5 - Lists
  * 4.6 - Forms
 * 5.0 - Plugins

 * ----------------------------------------------------------------------------
 */

/**
 * 1.0 Custom settings
 * ----------------------------------------------------------------------------
 */

// Add some whitespace between top bar and content
.top-bar-container, .tab-bar {
	margin-bottom: rem-calc(32);
}


/**
 * 2.0 Typography
 * ----------------------------------------------------------------------------
 */

// Insert styles here


/**
 * 3.0 Header, sidebar and footer
 * ----------------------------------------------------------------------------
 */

// Insert styles here


/**
 * 4.0 Content
 * ----------------------------------------------------------------------------
 */


	/**
	 * 4.1 Pages
	 * ------------------------------------
	 */

	 // Hero

	#homepage-hero {
		background: url("http://foundation.zurb.com/assets/img/marquee-stars.svg") repeat scroll 0 0 #074E68;
		padding: rem-calc(20) 0;
		margin: - rem-calc(32) 0 rem-calc(32);
		position: relative;
		text-align: left;
		height: auto;

			h1 a, h4 { color: #fff; }

			.floatingyeti img {
				max-width: 30%;
				position: absolute;
				right: rem-calc(100);
			}

			.download { margin-top: rem-calc(20); }
		}


	/**
	 * 4.2 Posts
	 * ------------------------------------
	 */

	// Insert styles here


	/**
	 * 4.3 Widgets
	 * ------------------------------------
	 */

	// Insert styles here


	/**
	 * 4.4 Comments
	 * ------------------------------------
	 */

	// Insert styles here


	/**
	 * 4.5 Lists
	 * ------------------------------------
	 */

	// Insert styles here


	/**
	 * 4.6 Forms
	 * ------------------------------------
	 */

	// Insert styles here


/**
 * 5.0 Plugins
 * ----------------------------------------------------------------------------
 */

// Insert styles here

